@@ -1,3 +1,8 @@
+2019-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/image.h ("C"): Include as "magick/image-private.h" as the
+	other headers are.
+
 2019-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/image-private.h (_ImageExtra): Put ImageExtra definition
